<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.CreateAccountActivity"
    android:background="@color/primary" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/name"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/divider"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/divider"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/divider"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/divider"
            android:textSize="20sp" />


        <Button
            android:id="@+id/createUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:background="@drawable/round_corners"
            android:layout_marginTop="15dp"
            android:textColor="@color/icons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/icons"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/already_have_an_account_log_in_here"
            android:id="@+id/loginTextView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/primary_light"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
