<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/recipeImageView"
        android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/dragIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@id/recipeImageView"
            android:layout_alignBottom="@id/recipeImageView"
            android:gravity="bottom|left"
            android:src="@drawable/ic_reorder_white_24dp"/>

    </RelativeLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipeTitleTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/recipe_name"
            android:textColor="@color/primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publisher"
            android:id="@+id/publisherTextView"
            android:textStyle="italic"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:id="@+id/rankTextView"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/accent"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>